# SwitchProConLinuxUSB

./: .gitignore  50-uinput.rules  71-nintendo-switch-procon-usb.rules  99-hid-procon.rules  99-hid.rules  CMakeLists.txt  License  README.md  install  install.sh  main.cpp  xbox_config
src/: procon.hpp
